[gd_scene load_steps=8 format=2]

[ext_resource path="res://ball/bola2-b.png" type="Texture" id=1]
[ext_resource path="res://ball/ball.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/break.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/you_win.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/lose.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/start.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[node name="ball" type="RigidBody2D"]
script = ExtResource( 2 )

[node name="spr_ball" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="sound_break" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="sound_hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="sound_lose" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 5 )

[node name="sound_start" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 6 )

[node name="sound_win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
